fix logo sizing on mobile

--- a/src/app/employees/employee-home/employee-home.component.css
+++ b/src/app/employees/employee-home/employee-home.component.css
@@ -41,7 +41,7 @@
 }
 
 .mobile-banner-section .org-logo {
-  background-size: 50%;
+  background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
   width: 100%;
